@@ -1,5 +1,8 @@
 $Id$
 
+2003-12-20  Christian Stimming  <stimming@tuhh.de>
+
+	* gwenhywfar.m4: Make version error message more verbose.
 
 2003/12/20 Martin Preuss <martin@libchipcard.de>
 ------------------------------------------------
